# knowledge-index

./: .dockerignore  .gitignore  .platform.app.yaml  Dockerfile  Dockerfile-jupyter  Dockerfile-web  Dockerfile-web-nocode  README.md  devenv.nix  docker-compose.yml  fly.toml  pyproject.toml  readme.md  requirements.txt  vercel.json
.github/workflows/: test.yml
.platform/: routes.yaml
app/: main.py  tensorflow.py  test_main.py
cli/: answering.py  main.py  support.py
data/products/: community-edition.md
docker/: supervisord.conf
web/: answering.py  answering_test.py  cache.py  config.py  download.py  embedding.py  exception.py  ingest.py  llm.py  main.py  params.py  query.py  results.py  scraper.py  security.py  status.py  storage.py  summary.py  test_main.py  tracking.py  upload.py  utils.py  vector_store.py
web/__tests__/: helper.py  test_cache.py  test_config.py  test_ingest.py  test_main.py  test_params.py  test_query.py  test_security.py
