[tool.poetry]
name = "shopware-knowledge"
version = "0.1.0"
description = ""
authors = ["Dominic Klein <d.klein@shopware.com>"]
readme = "README.md"
packages = [{include = "web"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.0.332"
faiss-cpu = "^1.7.4"
unstructured = "^0.7.12"
libmagic = "^1.0"
openai = "^0.27.8"
tiktoken = "^0.4.0"
fastapi = "^0.99.1"
pydantic = "^1.10.11"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
httpcore = {extras = ["http2"], version = "^0.17.3"}
httpx = "^0.25.1"
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
python-frontmatter = "^1.0.0"
typer = "^0.9.0"
rich = "^13.4.2"
pyyaml = "^6.0"
langchainhub = "^0.1.13"
posthog = "^3.0.2"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
tensorflow-text = "2.13.0"
pytest = "^7.4.0"
ruff = "^0.1.5"

[tool.poetry.scripts]
cli = "cli.main:app"

[tool.poetry.group.dev.dependencies]
transformers = "^4.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
