[tool.poetry]
name = "shopware-knowledge"
version = "0.1.0"
description = ""
authors = ["Dominic Klein <d.klein@shopware.com>"]
readme = "README.md"
packages = [{include = "web"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.0.354"
faiss-cpu = "^1.7.4"
unstructured = "^0.11.8"
libmagic = "^1.0"
openai = "^1.10.0"
langchain-openai = "^0.0.5"
tiktoken = "^0.5.2"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
uvicorn = "^0.25.0"
gunicorn = "^21.2.0"
httpcore = {extras = ["http2"], version = "^1.0.2"}
httpx = "^0.26.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
beautifulsoup4 = "^4.12.2"
lxml = "^5.0.0"
python-frontmatter = "^1.0.1"
typer = "^0.9.0"
rich = "^13.7.0"
pyyaml = "^6.0.1"
langchainhub = "^0.1.14"
posthog = "^3.1.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
tensorflow-text = "^2.15.0"
pytest = "^7.4.4"
ruff = "^0.1.11"
markdownify = "^0.11.6"
python-slugify = "^8.0.1"

[tool.poetry.scripts]
cli = "cli.main:app"

[tool.poetry.group.dev.dependencies]
transformers = "^4.36.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
